--- a/index.html
+++ b/index.html
@@ -25,5 +25,15 @@
             </div>
         </div>
     </header>
+    <section class="hero">
+        <div class="container">
+            <ul class="breadcrumbs">
+                <li class="breadcrumbs-item"><a class="breadcrumbs-link" href="#">Главная</a></li>
+                <li>Меню</li>
+            </ul>
+            <h1 class="hero-title">Наше меню</h1>
+            <p class="hero-description">Выбирай из предложенного асссортимента и мы доставим блюдо в течении часа</p>
+        </div>
+    </section>
 </body>
 </html>
