--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header">
+            <div class="header-wrapper">
                 <div class="logo"></div>
                 <nav class="nav">
                     <a href="#" class="nav-link">Главная</a>
@@ -32,7 +32,16 @@
                 <li>Меню</li>
             </ul>
             <h1 class="hero-title">Наше меню</h1>
-            <p class="hero-description">Выбирай из предложенного асссортимента и мы доставим блюдо в течении часа</p>
+            <p class="hero-description">Выбирай из предложенного асссортимента и мы доставим блюдо в&nbsp;течении часа</p>
+        </div>
+    </section>
+    <section class="banner">
+        <div class="container">
+            <div class="banner-wrapper">
+                <h2 class="banner-title"><span>Скидка</span>-30%</h2>
+                <p class="banner-description">Только при покупке 3-х и более позиций,<br> мы дарим скидку. Акции не суммируются.</p>
+                <button class="banner-btn">Купить сейчас</button>
+            </div>
         </div>
     </section>
 </body>
