--- a/index.html
+++ b/index.html
@@ -39,10 +39,112 @@
         <div class="container">
             <div class="banner-wrapper">
                 <h2 class="banner-title"><span>Скидка</span>-30%</h2>
-                <p class="banner-description">Только при покупке 3-х и более позиций,<br> мы дарим скидку. Акции не суммируются.</p>
-                <button class="banner-btn">Купить сейчас</button>
+                <p class="banner-description">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не суммируются.</p>
+                <button type="button" class="banner-btn">Купить сейчас</button>
             </div>
         </div>
     </section>
+    <main>
+        <section>
+            <div class="container">
+                <div class="menu">
+                    <div class="menu-header">
+                        <h2 class="menu-title">Бургеры</h2>
+                        <select name="" id="">
+                            <option value="Сортировать" disabled selected>Сортировать</option>
+                            <option value="По умолчанию">По умолчанию</option>
+                            <option value="По возрастанию цен">По возрастанию цены</option>
+                            <option value="По убыванию цен">По убыванию цены</option>
+                        </select>
+                    </div>
+                    <div class="menu-box">
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/01.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Острый Бургер</h3>
+                            <p class="menu-price">$26</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/02.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Гриль бургер</h3>
+                            <p class="menu-price">$16</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/03.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Бургер Гигант</h3>
+                            <p class="menu-price">$37</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/04.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Бургер с курицей</h3>
+                            <p class="menu-price">$18</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/05.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Бургер с курицей</h3>
+                            <p class="menu-price">$9</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/06.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Тройной Бургер</h3>
+                            <p class="menu-price">$7</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="menu">
+                    <div class="menu-header">
+                        <h2 class="menu-title">Дополнительно</h2>
+                    </div>
+                    <div class="menu-box">
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/07.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Сэндвич</h3>
+                            <p class="menu-price">$3</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/08.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Картошка Фри</h3>
+                            <p class="menu-price">$5</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/09.jpg" alt="">
+                            </div>
+                            <h3 class="menu-name">Хот-Дог</h3>
+                            <p class="menu-price">$7</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
