--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </div>
                             <h3 class="menu-name">Острый Бургер</h3>
                             <p class="menu-price">$26</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
@@ -72,7 +72,7 @@
                             </div>
                             <h3 class="menu-name">Гриль бургер</h3>
                             <p class="menu-price">$16</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
@@ -80,7 +80,7 @@
                             </div>
                             <h3 class="menu-name">Бургер Гигант</h3>
                             <p class="menu-price">$37</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
@@ -88,7 +88,7 @@
                             </div>
                             <h3 class="menu-name">Бургер с курицей</h3>
                             <p class="menu-price">$18</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
@@ -96,7 +96,7 @@
                             </div>
                             <h3 class="menu-name">Бургер с курицей</h3>
                             <p class="menu-price">$9</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
@@ -104,7 +104,7 @@
                             </div>
                             <h3 class="menu-name">Тройной Бургер</h3>
                             <p class="menu-price">$7</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                             </div>
                             <h3 class="menu-name">Сэндвич</h3>
                             <p class="menu-price">$3</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
@@ -131,7 +131,7 @@
                             </div>
                             <h3 class="menu-name">Картошка Фри</h3>
                             <p class="menu-price">$5</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
@@ -139,12 +139,48 @@
                             </div>
                             <h3 class="menu-name">Хот-Дог</h3>
                             <p class="menu-price">$7</p>
-                            <button type="button" class="menu-btn">Купить</button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+                <a href="" class="footer-logo"></a>
+            </div>
+            <div class="footer-item">
+                <h3 class="footer-title">Основные ссылки</h3>
+                <nav class="footer-nav">
+                    <a href="#">Меню</a>
+                    <a href="#">Заказ и Доставка</a>
+                    <a href="#">Методы оплаты</a>
+                    <a href="#">Контакты</a>
+                </nav>
+            </div>
+            <div class="footer-item">
+                <h3 class="footer-title">Основная информация</h3>
+                <ul class="footer-list">
+                    <li>
+                        <span>Время</span>
+                        ПН - ВС<br>
+                        11:00 - 22:00 без перерывов
+                    </li>
+                    <li>
+                        <span>Адрес</span>
+                        Москва, ул. Тверская, 5
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <div class="tel-container">
+                    <a class="footer-tel" href="tel:+79007871313">+ 7 900 787 13-13</a>
+                    <a class="footer-tel" href="tel:+79007001414">+ 7 900 700 14-14</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
