--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="headerTop">
         <div class="container">
             <div class="header-wrapper">
                 <div class="logo"></div>
@@ -40,12 +40,12 @@
             <div class="banner-wrapper">
                 <h2 class="banner-title"><span>Скидка</span>-30%</h2>
                 <p class="banner-description">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не суммируются.</p>
-                <button type="button" class="banner-btn">Купить сейчас</button>
+                <a href="#menuBurger" class="banner-btn">Купить сейчас</a>
             </div>
         </div>
     </section>
     <main>
-        <section>
+        <section id="menuBurger">
             <div class="container">
                 <div class="menu">
                     <div class="menu-header">
@@ -182,5 +182,7 @@
             </div>
         </div>
     </footer>
+    <a href="#headerTop" class="button-up hidden" id="btnUp">Наверх</a>
+    <script src="scripts/smooth-scroll.js" type="text/javascript"></script>
 </body>
 </html>
