--- a/index.html
+++ b/index.html
@@ -116,30 +116,36 @@
                     <div class="menu-header">
                         <h2 class="menu-title">Дополнительно</h2>
                     </div>
-                    <div class="menu-box">
-                        <div class="menu-item">
+                    <div class="menu-box _additionally">
+                        <div class="menu-item _additionally">
                             <div class="menu-thumb">
                                 <img src="images/menu/07.jpg" alt="">
                             </div>
-                            <h3 class="menu-name">Сэндвич</h3>
-                            <p class="menu-price">$3</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <div class="menu-info">
+                                <h3 class="menu-name">Сэндвич</h3>
+                                <p class="menu-price">$3</p>
+                                <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            </div>
                         </div>
-                        <div class="menu-item">
+                        <div class="menu-item _additionally">
                             <div class="menu-thumb">
                                 <img src="images/menu/08.jpg" alt="">
                             </div>
-                            <h3 class="menu-name">Картошка Фри</h3>
-                            <p class="menu-price">$5</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <div class="menu-info">
+                                <h3 class="menu-name">Картошка Фри</h3>
+                                <p class="menu-price">$5</p>
+                                <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            </div>
                         </div>
-                        <div class="menu-item">
+                        <div class="menu-item _additionally">
                             <div class="menu-thumb">
                                 <img src="images/menu/09.jpg" alt="">
                             </div>
-                            <h3 class="menu-name">Хот-Дог</h3>
-                            <p class="menu-price">$7</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <div class="menu-info">
+                                <h3 class="menu-name">Хот-Дог</h3>
+                                <p class="menu-price">$7</p>
+                                <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -159,6 +165,8 @@
                     <a href="#">Методы оплаты</a>
                     <a href="contact.html">Контакты</a>
                 </nav>
+                <a class="footer-tel _mobile" href="tel:+79007871313">+ 7 900 787 13-13</a>
+                <a class="footer-tel _mobile" href="tel:+79007001414">+ 7 900 700 14-14</a>
             </div>
             <div class="footer-item">
                 <h3 class="footer-title">Основная информация</h3>
