--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="menu">
                     <div class="menu-header">
                         <h2 class="menu-title">Бургеры</h2>
-                        <select name="" id="">
+                        <select name="" id="" class="menu-select">
                             <option value="Сортировать" disabled selected>Сортировать</option>
                             <option value="По умолчанию">По умолчанию</option>
                             <option value="По возрастанию цен">По возрастанию цены</option>
