--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="menu">
                     <div class="menu-header">
                         <h2 class="menu-title">Бургеры</h2>
-                        <select name="" id="" class="menu-select">
+                        <select class="menu-select">
                             <option value="Сортировать" disabled selected>Сортировать</option>
                             <option value="По умолчанию">По умолчанию</option>
                             <option value="По возрастанию цен">По возрастанию цены</option>
@@ -201,7 +201,7 @@
         </nav>
         <button class="modal-close" onclick="closeModal()"></button>
     </div>
-    <script src="scripts/smooth-scroll.js" type="text/javascript"></script>
-    <script src="scripts/mobile-menu.js" type="text/javascript"></script>
+    <script src="scripts/smooth-scroll.js"></script>
+    <script src="scripts/mobile-menu.js"></script>
 </body>
 </html>
