--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <header class="header" id="headerTop">
@@ -61,51 +63,51 @@
                     <div class="menu-box">
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/01.jpg" alt="">
+                                <img src="images/menu/01.webp" alt="">
                             </div>
                             <h3 class="menu-name">Острый Бургер</h3>
                             <p class="menu-price">$26</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.webp" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/02.jpg" alt="">
+                                <img src="images/menu/02.webp" alt="">
                             </div>
                             <h3 class="menu-name">Гриль бургер</h3>
                             <p class="menu-price">$16</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.webp" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/03.jpg" alt="">
+                                <img src="images/menu/03.webp" alt="">
                             </div>
                             <h3 class="menu-name">Бургер Гигант</h3>
                             <p class="menu-price">$37</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.webp" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/04.jpg" alt="">
+                                <img src="images/menu/04.webp" alt="">
                             </div>
                             <h3 class="menu-name">Бургер с курицей</h3>
                             <p class="menu-price">$18</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.webp" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/05.jpg" alt="">
+                                <img src="images/menu/05.webp" alt="">
                             </div>
                             <h3 class="menu-name">Бургер с курицей</h3>
                             <p class="menu-price">$9</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.webp" alt=""><span>Купить</span></button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/06.jpg" alt="">
+                                <img src="images/menu/06.webp" alt="">
                             </div>
                             <h3 class="menu-name">Тройной Бургер</h3>
                             <p class="menu-price">$7</p>
-                            <button type="button" class="menu-btn"><img src="images/menu-cart.png" alt=""><span>Купить</span></button>
+                            <button type="button" class="menu-btn"><img src="images/menu-cart.webp" alt=""><span>Купить</span></button>
                         </div>
                     </div>
                 </div>
@@ -120,7 +122,7 @@
                     <div class="menu-box _additionally">
                         <div class="menu-item _additionally">
                             <div class="menu-thumb">
-                                <img src="images/menu/07.jpg" alt="">
+                                <img src="images/menu/07.webp" alt="">
                             </div>
                             <div class="menu-info">
                                 <h3 class="menu-name">Сэндвич</h3>
@@ -130,7 +132,7 @@
                         </div>
                         <div class="menu-item _additionally">
                             <div class="menu-thumb">
-                                <img src="images/menu/08.jpg" alt="">
+                                <img src="images/menu/08.webp" alt="">
                             </div>
                             <div class="menu-info">
                                 <h3 class="menu-name">Картошка Фри</h3>
@@ -140,7 +142,7 @@
                         </div>
                         <div class="menu-item _additionally">
                             <div class="menu-thumb">
-                                <img src="images/menu/09.jpg" alt="">
+                                <img src="images/menu/09.webp" alt="">
                             </div>
                             <div class="menu-info">
                                 <h3 class="menu-name">Хот-Дог</h3>
